gcp/k8s/k8s-gke-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: secret-challenge
  labels:
    app: secret-challenge
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: secret-challenge
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  defaultBackend:
    service:
      name: secret-challenge
  labels:
      port:
        number: 80
